# user-registration

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  yoyo.ini
.github/workflows/: ci.yml
docs/: architecture-decisions.md  architecture-diagram.mmd  dependency_injection.md  pull-requests.md  requirements.md  roadmap.md
migrations/: 20251103_160000_create_account_table.rollback.sql  20251103_160000_create_account_table.sql  20251104_131949_create_account_activation_table.rollback.sql  20251104_131949_create_account_activation_table.sql
scripts/: migrate.py
src/: __init__.py  main.py
src/account/: __init__.py
src/account/application/: __init__.py
src/account/application/commands/: __init__.py  activate_account.py  register_account.py
src/account/application/events/: account_created_handler.py
src/account/domain/: __init__.py  exceptions.py
src/account/domain/entities/: __init__.py  account.py  account_activation.py
src/account/domain/events/: __init__.py  account_created.py
src/account/domain/exceptions/: __init__.py
src/account/domain/repositories/: __init__.py  account_activation_repository.py  account_repository.py
src/account/domain/value_objects/: __init__.py  account_id.py  activation_code.py  email.py  password.py
src/account/infrastructure/di/: __init__.py  account_module.py
src/account/infrastructure/http/: __init__.py  account_controller.py  dtos.py
src/account/infrastructure/persistence/: __init__.py  account_activation_mapper.py  account_mapper.py  postgres_account_activation_repository.py  postgres_account_repository.py
src/shared/: __init__.py
src/shared/application/services/: email_message.py  email_service.py
src/shared/domain/: __init__.py
src/shared/domain/events/: __init__.py  event_dispatcher.py
src/shared/domain/value_objects/: __init__.py  uuid_v7.py
src/shared/infrastructure/: __init__.py
src/shared/infrastructure/database/: __init__.py  connection.py
src/shared/infrastructure/di/: __init__.py  container.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_health.py
tests/integration/account/: __init__.py
tests/integration/shared/: __init__.py
tests/unit/: __init__.py
tests/unit/account/: __init__.py
(+38 files in other folders)
